kubernetes/apps/default/seerr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  labels:
    app: seerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: seerr
        image: ghcr.io/seerr-team/seerr:v3.5.0
        ports:
        - containerPort: 5055
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
        livenessProbe:
          httpGet:
            path: /api/v1/status
            port: 5055
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 3
          failureThreshold: 3
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: jellyseerr-config-pvc
