kubernetes/apps/default/seerr/svc.yaml
# --- SERVICE ---
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: seerr.torquasmvo.internal
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.219
  selector:
    app: seerr
  ports:
    - name: http
      protocol: TCP
      port: 5055
      targetPort: 5055
